--- a/src/components/Apple/styles.css
+++ b/src/components/Apple/styles.css
@@ -3,43 +3,45 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 30px;
-    height: 30px;
+    width: 38px;
+    height: 38px;
 }
 
 .leaf {
     position: absolute;
-    width: 2px;
-    height: 5px;
+    width: 4px;
+    height: 10px;
     top: 4px;
-    left: 13px;
+    left: 17px;
     background-color: rgb(2, 205, 2);
+    box-shadow: 0px 0px 1px 1px rgb(2, 205, 2);
 }
 
 .top1 {
     position: absolute;
-    width: 10px;
-    height: 10px;
+    width: 15px;
+    height: 15px;
     top: 6px;
-    left: 5px;
+    left: 4px;
     border-radius: 50%;
     background-color: rgb(225, 1, 1);
+    box-shadow: 0px 0px 1px 1px rgb(225, 1, 1);
 }
 
 .top2 {
     position: absolute;
-    width: 10px;
-    height: 10px;
+    width: 15px;
+    height: 15px;
     top: 6px;
-    right: 5px;
+    right: 4px;
     border-radius: 50%;
     background-color: rgb(225, 1, 1);
 }
 
 .bottom1 {
     position: absolute;
-    width: 9px;
-    height: 9px;
+    width: 13px;
+    height: 13px;
     bottom: 8px;
     left: 6.6px;
     border-radius: 50%;
@@ -48,30 +50,39 @@
 
 .bottom2 {
     position: absolute;
-    width: 9px;
-    height: 9px;
+    width: 13px;
+    height: 13px;
     bottom: 8px;
-    right: 6.6px;
+    right: 6.5px;
     border-radius: 50%;
     background-color: rgb(225, 1, 1);
 }
 
 .left {
     position: absolute;
-    width: 2px;
-    height: 7px;
-    top: 12px;
-    left: 6px;
+    width: 4px;
+    height: 10px;
+    top: 15px;
+    left: 5.5px;
     transform: rotate(-14deg);
+    background-color: rgb(225, 1, 1);
+}
+
+.center {
+    position: absolute;
+    width: 4px;
+    height: 10px;
+    top: 11px;
+    left: 17px;
     background-color: rgb(225, 1, 1);
 }
 
 .right {
     position: absolute;
-    width: 2px;
-    height: 7px;
-    top: 12px;
-    right: 6px;
+    width: 4px;
+    height: 10px;
+    top: 15px;
+    right: 5.5px;
     transform: rotate(14deg);
     background-color: rgb(225, 1, 1);
 }
