--- a/src/components/Snake/styles.css
+++ b/src/components/Snake/styles.css
@@ -1,14 +1,16 @@
 .snake {
     position: relative;
-    width: 28px;
-    height: 28px;
+    width: 38px;
+    height: 38px;
 }
 
+/* 1b4f8f */
 .body {
-    background-color: rgb(48, 151, 0);
+    background-color: rgb(0, 230, 230);
+    box-shadow: 0px 0px 5px 4px rgb(0, 230, 230);
     position: absolute;
-    top: -1px;
-    left: -1px;
+    top: 4px;
+    left: 4px;
     width: 30px;
     height: 30px;
     border-radius: 50%;
