--- a/src/components/Snake/styles.css
+++ b/src/components/Snake/styles.css
@@ -4,7 +4,6 @@
     height: 38px;
 }
 
-/* 1b4f8f */
 .body {
     background-color: rgb(0, 230, 230);
     box-shadow: 0px 0px 5px 4px rgb(0, 230, 230);
@@ -14,4 +13,9 @@
     width: 30px;
     height: 30px;
     border-radius: 50%;
+}
+
+.body-active {
+    background-color: rgb(146, 255, 255);
+    box-shadow: 0px 0px 5px 4px rgb(146, 255, 255);
 }
