--- a/src/components/Apple/styles.css
+++ b/src/components/Apple/styles.css
@@ -1,5 +1,5 @@
 .apple {
-    position: relative;
+    position: absolute;
     display: flex;
     align-items: center;
     justify-content: center;
